hello-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-front
  namespace: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-front
  template:
    metadata:
      labels:
        app: hello-app-front
    spec:
      containers:
        - name: hello-app-front-container
          image: hello-app-front:latest
          ports:
            - containerPort: 80
