hello-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-front
  namespace: hello-app
spec:
  selector:
    app: hello-app-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
