hello-app/hello-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: hello-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello.hyunbindev.site
      secretName: ddm-ingress-tls
  rules:
    - host: hello.hyunbindev.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hello-gateway-service
                port:
                  number: 8081
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: hello-gateway-service
                port:
                  number: 8081
          - path: /login/oauth2/code/github
            pathType: Prefix
            backend:
              service:
                name: hello-gateway-service
                port:
                  number: 8081
